# body-insight

./: .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  alembic.ini  docker-compose.yaml  mypy.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 2024-08-23-added_realization_and_patient.py
for_develop/nginx/: nginx.conf
for_develop/pgadmin/config/: pgadmin.env
for_develop/postgresql/config/: postgresql.env
for_develop/postgresql/init/: init.sql
src/body_insight/: __init__.py
