[project]
name = "body-insight"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Tadashi Takahashi", email = "ttakahashi@umn.co.jp" }
]
dependencies = [
    "fastapi>=0.112.1",
    "pydantic>=2.8.2",
    "boto3>=1.35.0",
    "psycopg[binary]>=3.2.1",
    "sqlalchemy>=2.0.32",
    "alembic>=1.13.2",
    "uvicorn>=0.30.6",
]
readme = "README.md"
requires-python = ">= 3.12.4"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "uvicorn[standard]>=0.30.6",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/body_insight"]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]
